# GobIA-auditor

./: .env.example  .gitignore  AGENTS.md  CONSTITUTION.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: architecture.md  opacity-signals.md  plan.md  spec.md  sprint-log-2026-05-04.md  sprint-log-2026-05-07.md  sprint-log-2026-05-08.md  tasks.md  team.md
docs/examples/: example_01_concentracion_secop.md  example_02_oferente_unico.md  example_03_adicion_excesiva.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  contest.py  main.py
src/detection/: __init__.py  llm_router.py  rules.py
src/ingestion/: __init__.py  normalizer.py  secop_client.py
src/ingestion/adapters/: __init__.py  base.py  generic_socrata.py  secop.py
src/reporting/: __init__.py  report.py
src/storage/: __init__.py  contest_store.py  qdrant_store.py
tests/: test_adapters.py  test_contest.py  test_llm_router.py  test_llm_router_integration.py  test_rules.py  test_secop_client.py  test_smoke.py
